# msc_code

./: .gitignore  pyproject.toml
src/: definition.py  frontend.py  main.py  problem.py
src/deepl/: cno.py  dl1.py  dl2.py  factory.py  fno_1d.py  fno_2d.py  kno.py  masking.py  network.py  rnn.py  transformer1.py  transformer2.py
src/deepl/extension/filtered_lrelu/: filtered_lrelu.py
src/deepl/mishra_demo/: autodiff.py  mishra_demo_class02.py  tutorial1.py
src/numerics/: distance.py  grid.py  integral.py
src/pde/: dataset.py  heat.py  integral.py  masking.py  model.py  multidiff.py  network.py  pde.py  pinn.py  pinn_heat.py  poisson.py  saveload.py
src/pde/heat/: dataset.py
src/pde/legacy/: masking.py  pinn_heat.py
src/pde/legacy/poisson/: dataset.py  frontend.py  learner.py  reboot.py
src/pde/poisson/: dataset.py  frontend.py  learner.py  reboot.py  solver.py
src/pde/wave/: dataset.py
src/playground/: pde.py
src/util/: dataset.py  equality.py  gif.py  grid.py  multidiff.py  plot.py  saveload.py
tests/: test_dataset.py  test_deepl.py  test_integral.py  test_multidiff.py  test_pde.py  test_util.py  test_util_math.py
