[tool.poetry]
name = "msc"
version = "0.1.0"
description = "MSc Thesis of Shengdi 'shc' Chen"
authors = ["Shengdi 'shc' Chen"]
readme = "README.md"
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "*"
numpy = "*"
torch = "*"
torchvision = "*"
torchaudio = "*"
scipy = "*"
matplotlib = "*"
imageio = "*"
neuraloperator = "*"
wandb = "*"
torch-harmonics = "*"

[tool.poetry.group.dev.dependencies]
pynvim = "*"
ropevim = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
